Locations (client/server) + reset

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,20 @@
 
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
+
+        <!-- locations -->
+        <script src="js/app/Locations/model/Location.js"></script>
+        <script src="js/app/Locations/model/LocationCollection.js"></script>
+
+        <script src="js/app/Locations/tpl/LocationTpl.js"></script>
+        <script src="js/app/Locations/tpl/LocationCollectionTpl.js"></script>
+
+        <script src="js/app/Locations/view/LocationView.js"></script>
+        <script src="js/app/Locations/view/LocationCollectionView.js"></script>
+
+        <script src="js/app/Locations/LocationRouter.js"></script>
+        <script src="js/app/Locations/Controller.js"></script>
+
         <!-- scripts.js-end -->
     </head>
     <body>
