add messanger module

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/Notifications/view/InformationView.css">
         <!-- styles.css-end -->
         
         <!-- scripts.js -->
@@ -34,6 +35,23 @@
 
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
+
+        <!-- notifications -->
+
+        <script src="js/app/Notifications/tpl/informationTpl.js"></script>
+        <script src="js/app/Notifications/tpl/warningTpl.js"></script>
+        <script src="js/app/Notifications/tpl/errorTpl.js"></script>
+        <script src="js/app/Notifications/tpl/confirmTpl.js"></script>
+        <script src="js/app/Notifications/tpl/hintTpl.js"></script>
+ 
+        <script src="js/app/Notifications/view/InformationView.js"></script>
+        <script src="js/app/Notifications/view/WarningView.js"></script>
+        <script src="js/app/Notifications/view/ErrorView.js"></script>
+        <script src="js/app/Notifications/view/ConfirmView.js"></script>
+        <script src="js/app/Notifications/view/HintNotification.js"></script>
+
+        <script src="js/app/Notifications/Controller.js"></script>
+
         <!-- scripts.js-end -->
     </head>
     <body>
