main page update

--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
                             <h1>Dnipro Groups</h1>
                             <div class="col-md-4">
                                 <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                     <h4>DP-086-JS</h4>
                                     <p>10 Jul 2015 - 10 Oct 2016</p>
                                     <p><span>Teacher:</span></p>
@@ -83,6 +84,31 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                     <h4>DP-086-JS</h4>
                                     <p>10 Jul 2015 - 10 Oct 2016</p>
                                     <p><span>Teacher: </span>Dmytro Petin</p>
@@ -97,6 +123,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                     <h4>DP-086-JS</h4>
                                     <p>10 Jul 2015 - 10 Oct 2016</p>
                                     <p><span>Teacher: </span>Dmytro Petin</p>
@@ -104,6 +131,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                     <h4>DP-086-JS</h4>
                                     <p>10 Jul 2015 - 10 Oct 2016</p>
                                     <p><span>Teacher: </span>Dmytro Petin</p>
@@ -111,27 +139,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="content-item">
-                                    <h4>DP-086-JS</h4>
-                                    <p>10 Jul 2015 - 10 Oct 2016</p>
-                                    <p><span>Teacher: </span>Dmytro Petin</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="content-item">
-                                    <h4>DP-086-JS</h4>
-                                    <p>10 Jul 2015 - 10 Oct 2016</p>
-                                    <p><span>Teacher: </span>Dmytro Petin</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="content-item">
-                                    <h4>DP-086-JS</h4>
-                                    <p>10 Jul 2015 - 10 Oct 2016</p>
-                                    <p><span>Teacher: </span>Dmytro Petin</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="content-item">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                     <h4>DP-086-JS</h4>
                                     <p>10 Jul 2015 - 10 Oct 2016</p>
                                     <p><span>Teacher: </span>Dmytro Petin</p>
