--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,9 @@
         <title>Caesar DP-086-JS</title>
         <meta charset="utf-8">
         <!-- styles.css -->
-        <link rel="stylesheet" type="text/css" href="css/lib/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/lib/bootstrap.css">    
 
+        <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
         <!-- styles.css-end -->
@@ -33,33 +34,142 @@
 
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
-
-        <!-- locations -->
-        <script src="js/app/Locations/model/Location.js"></script>
-        <script src="js/app/Locations/model/LocationCollection.js"></script>
-
-        <script src="js/app/Locations/tpl/LocationTpl.js"></script>
-        <script src="js/app/Locations/tpl/LocationCollectionTpl.js"></script>
-
-        <script src="js/app/Locations/view/LocationView.js"></script>
-        <script src="js/app/Locations/view/LocationCollectionView.js"></script>
-
-        <script src="js/app/Locations/LocationRouter.js"></script>
-        <script src="js/app/Locations/Controller.js"></script>
-
         <!-- scripts.js-end -->
     </head>
     <body>
-         <div class="row">
-            <nav id="navbar" class="navbar navbar-default">
-                <div id="logo" class="animated"></div>
-            </nav>    
-        </div>
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-1">
-                <div id="messenger"></div>
-                <div id="confirm"></div>
-                <div id="main"></div>
+        <div class="site-wrapper container-fluid">
+            <div class="row">
+                <div class="col-md-1">
+                    <div class="main-menu">
+                        <div id="logo"></div>
+                    </div>
+                    <div class="main-nav">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="notifications">
+                        <div class="alert alert-success alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Well done!</strong>
+                        </div>
+                        <div class="alert alert-info alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Heads up!</strong>
+                        </div>
+                        <div class="alert alert-warning alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Warning!</strong>
+                        </div>
+                        <div class="alert alert-danger alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Oh snap!</strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="top-nav">
+                        <span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+                    </div>
+                    <div class="content">
+                        <div class="row content-row">
+                            <h1>Dnipro Groups</h1>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher:</span></p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="content-item">
+                                    <h4>DP-086-JS</h4>
+                                    <p>10 Jul 2015 - 10 Oct 2016</p>
+                                    <p><span>Teacher: </span>Dmytro Petin</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <nav class="content-pagination">
+                              <ul class="pagination">
+                                <li>
+                                  <a href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                  </a>
+                                </li>
+                                <li class="active"><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li>
+                                  <a href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                  </a>
+                                </li>
+                              </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="top-nav">
+                        <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <div class="user-account">
+                        <p><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User info will be here</p>
+                    </div>
+                    <div class="main-nav">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
