--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <title>Caesar DP-086-JS</title>
         <meta charset="utf-8">
         <!-- styles.css -->
-        <link rel="stylesheet" type="text/css" href="css/lib/bootstrap.css">    
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
@@ -12,12 +12,12 @@
         <!-- styles.css-end -->
         
         <!-- scripts.js -->
-        <script src="js/lib/jquery.js"></script>
-        <script src="js/lib/underscore.js"></script>
-        <script src="js/lib/backbone.js"></script>
-        <script src="js/lib/backbone-validation.js"></script>
-        <script src="js/lib/mediator.js"></script>
-        <script src="js/lib/bootstrap.js"></script>
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/backbone/backbone.js"></script>
+        <script src="bower_components/backbone.validation/dist/backbone-validation.js"></script>
+        <script src="bower_components/mediator-js/mediator.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		
         <script src="js/main.js"></script>
         <script src="js/app/Router.js"></script>
