try to update messanger

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
-        <link rel="stylesheet" type="text/css" href="css/app/Notifications/view/InformationView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/Messanger/view/InformationView.css">
         <!-- styles.css-end -->
         
         <!-- scripts.js -->
@@ -36,21 +36,19 @@
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
 
-        <!-- notifications -->
+        <!-- messanger -->
 
-        <script src="js/app/Notifications/tpl/informationTpl.js"></script>
-        <script src="js/app/Notifications/tpl/warningTpl.js"></script>
-        <script src="js/app/Notifications/tpl/errorTpl.js"></script>
-        <script src="js/app/Notifications/tpl/confirmTpl.js"></script>
-        <script src="js/app/Notifications/tpl/hintTpl.js"></script>
+        <script src="js/app/Messanger/tpl/informationTpl.js"></script>
+        <script src="js/app/Messanger/tpl/warningTpl.js"></script>
+        <script src="js/app/Messanger/tpl/errorTpl.js"></script>
+        <script src="js/app/Messanger/tpl/confirmTpl.js"></script>
+        <script src="js/app/Messanger/tpl/hintTpl.js"></script>
  
-        <script src="js/app/Notifications/view/InformationView.js"></script>
-        <script src="js/app/Notifications/view/WarningView.js"></script>
-        <script src="js/app/Notifications/view/ErrorView.js"></script>
-        <script src="js/app/Notifications/view/ConfirmView.js"></script>
-        <script src="js/app/Notifications/view/HintNotification.js"></script>
+        <script src="js/app/Messanger/view/InformView.js"></script>
+        <script src="js/app/Messanger/view/ConfirmView.js"></script>
+        <script src="js/app/Messanger/view/HintView.js"></script>
 
-        <script src="js/app/Notifications/Controller.js"></script>
+        <script src="js/app/Messanger/Controller.js"></script>
 
         <!-- scripts.js-end -->
     </head>
@@ -197,6 +195,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="messanger-wrap container">
         </div>
     </body>
 </html>
