Login is now at separated page

--- a/client/home.html
+++ b/client/home.html
@@ -19,7 +19,6 @@
         <script src="bower_components/mediator-js/mediator.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="js/lib/js.cookie.js"></script>
-        <script src="js/lib/md5.js"></script>
 		
         <!-- scripts.js -->
         <script src="js/main.js"></script>
@@ -46,13 +45,10 @@
         <script src='js/app/Cookies/Processor.js'></script>
         <script src='js/app/Cookies/Controller.js'></script>
         
-        <!-- login -->
-        <script src="js/app/Login/tpl/LoginTpl.js"></script>
-        <script src="js/app/Login/tpl/LoginSuccessTpl.js"></script>
-        <script src="js/app/Login/view/LoginView.js"></script>
-        <script src="js/app/Login/view/LoginSuccessView.js"></script>
-        <script src='js/app/Login/Controller.js'></script>
-        <script src='js/app/Login/LoginRouter.js'></script>
+        <!-- session -->
+        <script src="js/app/Session/tpl/CurrentSessionTpl.js"></script>
+        <script src="js/app/Session/view/CurrentSessionView.js"></script>
+        <script src='js/app/Session/Controller.js'></script>
 
         <!-- locations -->
         <script src="js/app/Locations/model/Location.js"></script>
