add working messanger

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" type="text/css" href="css/app/Messanger/view/InformationView.css">
         <!-- styles.css-end -->
         
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
+        
+
         <!-- scripts.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
@@ -19,6 +22,8 @@
         <script src="bower_components/backbone.validation/dist/backbone-validation.js"></script>
         <script src="bower_components/mediator-js/mediator.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
 
         <script src="js/main.js"></script>
         <script src="js/app/Router.js"></script>
