--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/Locations/view/LocationView.css">
         <!-- styles.css-end -->
         
         <!-- scripts.js -->
