--- a/client/index.html
+++ b/client/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div class="top-nav">
+                    <div class="top-nav" id="up-navig">
                         <span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
                     </div>
                     <div class="content">
@@ -91,7 +91,7 @@
 
                         </div>    
                     </div>
-                    <div class="top-nav">
+                    <div class="top-nav" id="down-navig">
                         <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                     </div>
                 </div>
