--- a/client/home.html
+++ b/client/home.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/Session/view/CurrentSession.css">
         <!-- styles.css-end -->
         
         <!-- libs -->
