Navigation and filters for groups

--- a/client/home.html
+++ b/client/home.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div class="top-nav" id="up-navig">
+                    <!--<div class="top-nav" id="up-navig">
                         <span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
                     </div>
                     <div class="content">
@@ -110,7 +110,7 @@
                     </div>
                     <div class="top-nav" id="down-navig">
                         <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="col-md-1">
                     <div class="user-account">
