--- a/client/home.html
+++ b/client/home.html
@@ -39,7 +39,12 @@
 
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
-        
+
+        <!-- menu -->
+        <script src="js/app/Menu/tpl/MenuTpl.js"></script>
+        <script src="js/app/Menu/view/MenuView.js"></script>
+        <script src='js/app/Menu/Controller.js'></script>
+
         <!-- user -->
         <script src='js/app/Users/model/Roles.js'></script>
         <script src='js/app/Users/model/User.js'></script>
@@ -73,7 +78,7 @@
             <div class="row">
                 <div class="col-md-1">
                     <div class="main-menu">
-                        <div id="logo"></div>
+                        <!--<div id="logo"></div>-->
                     </div>
                     <div class="main-nav">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
