--- a/client/home.html
+++ b/client/home.html
@@ -5,10 +5,12 @@
         <meta charset="utf-8">
         <!-- styles.css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupCollectionView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Locations/view/LocationView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Session/view/CurrentSession.css">
         <!-- styles.css-end -->
@@ -19,7 +21,9 @@
         <script src="bower_components/backbone/backbone.js"></script>
         <script src="bower_components/backbone.validation/dist/backbone-validation.js"></script>
         <script src="bower_components/mediator-js/mediator.min.js"></script>
+        <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
         <script src="js/lib/js.cookie.js"></script>
 		
         <!-- scripts.js -->
