Locations create/delete; Add group

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -5,6 +5,7 @@
     <title>Caesar Admin Panel</title>
 
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" href="css/main.css">
     
     <script src="js/templates.js"></script>
@@ -14,7 +15,9 @@
     <script src="../bower_components/backbone/backbone.js"></script>
     <script src="../bower_components/backbone.validation/dist/backbone-validation.js"></script>
     <script src="../bower_components/mediator-js/mediator.min.js"></script>
+    <script src="/bower_components/moment/min/moment.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
     
     <script src="js/main.js"></script>
 </head>
