--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" href="css/main.css">
-    
-    <script src="js/templates.js"></script>
 
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/underscore/underscore.js"></script>
@@ -20,20 +18,23 @@
     <script src="../bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
     
     <script src="js/main.js"></script>
+    <script src="js/templates.js"></script>
+    <script src="js/Model.js"></script>
+    <script src="js/View.js"></script>
+    <script src="js/Collection.js"></script>
 </head>
 <body>
     <div class="container">
-        <button class="btn btn-warning home">Back to home</button>
         <h2>Caesar Admin Panel</h2>
         <ul class="nav nav-pills">
             <li class="active"><a data-toggle="pill" href="#groups">Groups</a> </li>
             <li><a data-toggle="pill" href="#locations">Locations</a></li>
         </ul>
-
         <div class="tab-content">
             <div id="groups" class="tab-pane fade in active"></div>
             <div id="locations" class="tab-pane fade"></div>
         </div>
+        <button class="btn btn-warning home">Back to home</button>
     </div>
 </body>
 </html>
