--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -13,7 +13,7 @@
     <script src="../bower_components/backbone/backbone.js"></script>
     <script src="../bower_components/backbone.validation/dist/backbone-validation.js"></script>
     <script src="../bower_components/mediator-js/mediator.min.js"></script>
-    <script src="/bower_components/moment/min/moment.min.js"></script>
+    <script src="../bower_components/moment/min/moment.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
     
