--- a/client/home.html
+++ b/client/home.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupCollectionView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Locations/view/LocationView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Session/view/CurrentSession.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
+        <link rel="stylesheet" type="text/css" href="css/libs/bootstrap-dialog.min.css">
         <!-- styles.css-end -->            
 
         <!-- scripts.js -->
@@ -29,10 +29,10 @@
         <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
+        <script src="js/lib/bootstrap-dialog.min.js"></script>
         <script src="bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
         <script src="js/lib/js.cookie.js"></script>
-		
+        
         <!-- scripts.js -->
         <script src="js/main.js"></script>
         <script src="js/app/Router.js"></script>
