Pagination/Searcher add

--- a/client/home.html
+++ b/client/home.html
@@ -58,6 +58,14 @@
         <script src="js/app/Session/view/CurrentSessionView.js"></script>
         <script src='js/app/Session/Controller.js'></script>
 
+        <!-- paginator -->
+        <script src="js/app/Paginator/model/Paginator.js"></script>
+        <script src="js/app/Paginator/tpl/PaginatorTpl.js"></script>
+        <script src="js/app/Paginator/tpl/SearcherTpl.js"></script>
+        <script src="js/app/Paginator/view/PaginatorView.js"></script>
+        <script src="js/app/Paginator/view/SearcherView.js"></script>
+        <script src='js/app/Paginator/Controller.js'></script>
+
         <!-- locations -->
         <script src="js/app/Locations/model/Location.js"></script>
         <script src="js/app/Locations/model/LocationCollection.js"></script>
