--- a/client/home.html
+++ b/client/home.html
@@ -31,7 +31,7 @@
 
         <script src="js/lib/bootstrap-dialog.min.js"></script>
         <script src="bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
-        <script src="js/lib/js.cookie.js"></script>
+        <script src="bower_components/js-cookie/src/js.cookie.js"></script>
         
         <!-- scripts.js -->
         <script src="js/main.js"></script>
