--- a/client/login.html
+++ b/client/login.html
@@ -12,8 +12,8 @@
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
         <script src="bower_components/mediator-js/mediator.min.js"></script>
-        <script src="js/lib/js.cookie.js"></script>
-        <script src="js/lib/md5.js"></script>
+        <script src="bower_components/js-cookie/src/js.cookie.js"></script>
+        <script src="bower_components/blueimp-md5/js/md5.js"></script>
         <script src="js/login.js"></script>
     </head>
     <body>
