update router for group

--- a/client/home.html
+++ b/client/home.html
@@ -48,6 +48,7 @@
         <script src="js/app/Groups/view/GroupView.js"></script>
         <script src="js/app/Groups/view/GroupCollectionView.js"></script>
 
+        <script src="js/app/Groups/inheritanceRouter.js"></script>
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
 
