Add Users to admin panel

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -29,10 +29,12 @@
         <ul class="nav nav-pills">
             <li class="active"><a data-toggle="pill" href="#groups">Groups</a> </li>
             <li><a data-toggle="pill" href="#locations">Locations</a></li>
+            <li><a data-toggle="pill" href="#users">Users</a></li>
         </ul>
         <div class="tab-content">
             <div id="groups" class="tab-pane fade in active"></div>
             <div id="locations" class="tab-pane fade"></div>
+            <div id="users" class="tab-pane fade"></div>
         </div>
         <button class="btn btn-warning home">Back to home</button>
     </div>
