--- a/client/home.html
+++ b/client/home.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/main.css">
         <link rel="stylesheet" type="text/css" href="css/app/Menu/menu.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/Filter/view/SearcherView.css">
 
         <link rel="stylesheet" type="text/css" href="css/app/Messanger/view/InformationView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupCollectionView.css">
