Create router for reset

--- a/client/home.html
+++ b/client/home.html
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="container">
                     <!--<div class="top-nav" id="up-navig">
                         <span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
                     </div>
