Unify create/edit view

--- a/client/home.html
+++ b/client/home.html
@@ -52,7 +52,8 @@
 
         <script src="js/app/Groups/view/GroupView.js"></script>
         <script src="js/app/Groups/view/GroupCollectionView.js"></script>
-        <script src="js/app/Groups/view/GroupModalView.js"></script>
+        <!--<script src="js/app/Groups/view/GroupModalView.js"></script>-->
+        <script src="js/app/Groups/view/CreateEditGroupView.js"></script>
 
         <script src="js/app/Groups/GroupRouter.js"></script>
         <script src="js/app/Groups/Controller.js"></script>
