Add my groups checkbox

--- a/client/home.html
+++ b/client/home.html
@@ -49,6 +49,7 @@
         <script src="js/app/Groups/tpl/GroupTpl.js"></script>
         <script src="js/app/Groups/tpl/GroupCollectionTpl.js"></script>
         <script src="js/app/Groups/tpl/GroupModalsTpl.js"></script>
+        <script src="js/app/Groups/tpl/MyGroupsTpl.js"></script>
 
         <script src="js/app/Groups/view/GroupView.js"></script>
         <script src="js/app/Groups/view/GroupCollectionView.js"></script>
