--- a/client/home.html
+++ b/client/home.html
@@ -65,6 +65,11 @@
         <script src="js/app/Menu/tpl/MenuTpl.js"></script>
         <script src="js/app/Menu/view/MenuView.js"></script>
         <script src='js/app/Menu/Controller.js'></script>
+        
+        <!-- error -->
+        <script src="js/app/Error/tpl/ErrorTpl.js"></script>
+        <script src="js/app/Error/view/ErrorView.js"></script>
+        <script src='js/app/Error/Controller.js'></script>
 
         <!-- user -->
         <script src='js/app/Users/model/Roles.js'></script>
