--- a/client/home.html
+++ b/client/home.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Filter/view/SearcherView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Schedule/view/GridView.css">
+        <link rel="stylesheet" type="text/css" href="css/app/error/view/ErrorView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Messanger/view/InformationView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Groups/view/GroupCollectionView.css">
         <link rel="stylesheet" type="text/css" href="css/app/Locations/view/LocationView.css">
