Create/edit users in admin panel

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -16,6 +16,7 @@
     <script src="../bower_components/moment/min/moment.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
+    <script src="../bower_components/blueimp-md5/js/md5.js"></script>
     
     <script src="js/main.js"></script>
     <script src="js/templates.js"></script>
