Add and delete events from db

--- a/client/home.html
+++ b/client/home.html
@@ -114,6 +114,7 @@
         <script src="js/app/Schedule/tpl/GridTpl.js"></script>
         
         <script src="js/app/Schedule/view/GridView.js"></script>
+        <script src="js/app/Schedule/view/EditView.js"></script>
         
         <script src="js/app/Schedule/ScheduleController.js"></script>
         <script src="js/app/Schedule/ScheduleRouter.js"></script>
