--- a/client/open/index.html
+++ b/client/open/index.html
@@ -23,8 +23,13 @@
         <script src="js/app/Schedule/model/EventCollection.js"></script>
         <script src="js/app/Schedule/model/Group.js"></script>
         <script src="js/app/Schedule/model/GroupCollection.js"></script>
+
         <script src="js/app/Schedule/tpl/WeekTpl.js"></script>
+        <script src="js/app/Schedule/tpl/MonthTpl.js"></script>
+
         <script src="js/app/Schedule/view/WeekView.js"></script>
+        <script src="js/app/Schedule/view/MonthView.js"></script>
+
         <script src="js/app/Schedule/ScheduleController.js"></script>
         <script src="js/app/Schedule/ScheduleRouter.js"></script>
 
