Add editView template

--- a/client/home.html
+++ b/client/home.html
@@ -112,6 +112,7 @@
         <script src="js/app/Schedule/model/EventCollection.js"></script>
         
         <script src="js/app/Schedule/tpl/GridTpl.js"></script>
+        <script src="js/app/Schedule/tpl/EditViewTpl.js"></script>
         
         <script src="js/app/Schedule/view/GridView.js"></script>
         <script src="js/app/Schedule/view/EditView.js"></script>
