Remove Bower; change relative paths to absolute

--- a/client/login.html
+++ b/client/login.html
@@ -5,15 +5,15 @@
             Caesar Log In
         </title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="css/login.css"> 
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="bower_components/underscore/underscore.js"></script>
-        <script src="bower_components/backbone/backbone.js"></script>
-        <script src="bower_components/js-cookie/src/js.cookie.js"></script>
-        <script src="bower_components/blueimp-md5/js/md5.js"></script>
-        <script src="js/login.js"></script>
+        <link rel="stylesheet" href="/css/lib/bootstrap.css">
+        <link rel="stylesheet" href="/css/login.css"> 
+        <script src="/js/lib/jquery.js"></script>
+        <script src="/js/lib/underscore.js"></script>
+        <script src="/js/lib/backbone.js"></script>
+        <script src="/js/lib/bootstrap.js"></script>
+        <script src="/js/lib/js.cookie.js"></script>
+        <script src="/js/lib/md5.js"></script>
+        <script src="/js/login.js"></script>
     </head>
     <body>
         <div class='container'>
