--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>Caesar Admin Panel</title>
 
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+    <link rel="stylesheet" href="/css/lib/bootstrap.css">
+    <link rel="stylesheet" href="/css/lib/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/underscore/underscore.js"></script>
-    <script src="../bower_components/backbone/backbone.js"></script>
-    <script src="../bower_components/backbone.validation/dist/backbone-validation.js"></script>
-    <script src="../bower_components/mediator-js/mediator.min.js"></script>
-    <script src="../bower_components/moment/min/moment.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="../bower_components/eonasdan-bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
-    <script src="../bower_components/blueimp-md5/js/md5.js"></script>
+    <script src="/js/lib/jquery.js"></script>
+    <script src="/js/lib/underscore.js"></script>
+    <script src="/js/lib/backbone.js"></script>
+    <script src="/js/lib/backbone-validation.js"></script>
+    <script src="/js/lib/mediator.min.js"></script>
+    <script src="/js/lib/moment.min.js"></script>
+    <script src="/js/lib/bootstrap.js"></script>
+    <script src="/js/lib/bootstrap-datetimepicker.js"></script>
+    <script src="/js/lib/js.cookie.js"></script>
 
     <script src="js/main.js"></script>
     <!-- TEMPLATES -->
