Employee layer added

--- a/client/home.html
+++ b/client/home.html
@@ -73,6 +73,10 @@
         <script src="/js/app/Users/model/Roles.js"></script>
         <script src="/js/app/Users/model/User.js"></script>
         
+        <!-- employee -->
+        <script src="/js/app/Employee/model/Employee.js"></script>
+        <script src="/js/app/Employee/model/EmployeeCollection.js"></script>
+        
         <!-- cookies -->
         <script src="/js/app/Cookies/Processor.js"></script>
         <script src="/js/app/Cookies/Controller.js"></script>
