Open page: routing

--- a/client/open/page.html
+++ b/client/open/page.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <title>Caesar Open Page</title>
 
-        <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="../css/lib/bootstrap.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="../bower_components/jquery/dist/jquery.js"></script>
-        <script src="../bower_components/underscore/underscore.js"></script>
-        <script src="../bower_components/backbone/backbone.js"></script>
-        <script src="../bower_components/mediator-js/mediator.min.js"></script>
-        <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="../bower_components/moment/min/moment.min.js"></script>
+        <script src="../js/lib/jquery.js"></script>
+        <script src="../js/lib/underscore.js"></script>
+        <script src="../js/lib/backbone.js"></script>
+        <script src="../js/lib/mediator.min.js"></script>
+        <script src="../js/lib/bootstrap.js"></script>
+        <script src="../js/lib/moment.min.js"></script>
         
         <script src="js/main.js"></script>
         
