updated messenger, design fixes"

--- a/client/home.html
+++ b/client/home.html
@@ -122,18 +122,18 @@
         <script src="/js/app/Schedule/ScheduleController.js"></script>
         <script src="/js/app/Schedule/ScheduleRouter.js"></script>
 
-        <!-- messanger -->
-        <script src="/js/app/Messanger/tpl/informationTpl.js"></script>
-        <script src="/js/app/Messanger/tpl/warningTpl.js"></script>
-        <script src="/js/app/Messanger/tpl/errorTpl.js"></script>
-        <script src="/js/app/Messanger/tpl/confirmTpl.js"></script>
-        <script src="/js/app/Messanger/tpl/hintTpl.js"></script>
+        <!-- messenger -->
+        <script src="/js/app/Messenger/tpl/informationTpl.js"></script>
+        <script src="/js/app/Messenger/tpl/warningTpl.js"></script>
+        <script src="/js/app/Messenger/tpl/errorTpl.js"></script>
+        <script src="/js/app/Messenger/tpl/confirmTpl.js"></script>
+        <script src="/js/app/Messenger/tpl/hintTpl.js"></script>
  
-        <script src="/js/app/Messanger/view/InformView.js"></script>
-        <script src="/js/app/Messanger/view/ConfirmView.js"></script>
-        <script src="/js/app/Messanger/view/HintView.js"></script>
+        <script src="/js/app/Messenger/view/InformView.js"></script>
+        <script src="/js/app/Messenger/view/ConfirmView.js"></script>
+        <script src="/js/app/Messenger/view/HintView.js"></script>
 
-        <script src="/js/app/Messanger/Controller.js"></script>
+        <script src="/js/app/Messenger/Controller.js"></script>
 
         <!-- scripts.js-end -->
     </head>
@@ -150,6 +150,8 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="notifications">
+                        <h4 class="text-center">Notifications</h4>
+                        <br>
                         <div class="alert alert-success alert-dismissible" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             <strong>Well done!</strong>
@@ -168,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8" id="container">
+                <div class="col-sm-8" id="main-container">
                 </div>
                 <div class="col-sm-1">
                     <div class="user-account">
@@ -180,7 +182,7 @@
                 </div>
             </div>
         </div>
-        <div class="messanger-wrap container"></div>
+        <div class="messenger-wrap container"></div>
         <div class="modal-wrap"></div>
     </body>
 </html>
