Show rooms in first office

--- a/client/home.html
+++ b/client/home.html
@@ -111,7 +111,11 @@
         <!-- schedule -->
         <script src="/js/app/Schedule/model/EventTypes.js"></script>
         <script src="/js/app/Schedule/model/Event.js"></script>
+        <script src="/js/app/Schedule/model/Office.js"></script>
+        <script src="/js/app/Schedule/model/Room.js"></script>
         <script src="/js/app/Schedule/model/EventCollection.js"></script>
+        <script src="/js/app/Schedule/model/OfficeCollection.js"></script>
+        <script src="/js/app/Schedule/model/RoomCollection.js"></script>
         
         <script src="/js/app/Schedule/tpl/GridTpl.js"></script>
         <script src="/js/app/Schedule/tpl/EditViewTpl.js"></script>
