--- a/client/home.html
+++ b/client/home.html
@@ -119,6 +119,7 @@
         
         <script src="/js/app/Schedule/tpl/GridTpl.js"></script>
         <script src="/js/app/Schedule/tpl/EditViewTpl.js"></script>
+        <script src="/js/app/Schedule/tpl/RoomsTpl.js"></script>
         
         <script src="/js/app/Schedule/view/GridView.js"></script>
         <script src="/js/app/Schedule/view/EditView.js"></script>
