--- a/client/home.html
+++ b/client/home.html
@@ -140,6 +140,16 @@
 
         <script src="/js/app/Messenger/Controller.js"></script>
 
+        <!-- contributors -->
+        <script src="/js/app/Contributors/model/Contributor.js"></script>
+        <script src="/js/app/Contributors/model/ContributorCollection.js"></script>
+        <script src="/js/app/Contributors/tpl/ContributorTpl.js"></script>
+        <script src="/js/app/Contributors/tpl/ContributorCollectionTpl.js"></script>
+        <script src="/js/app/Contributors/view/ContributorView.js"></script>
+        <script src="/js/app/Contributors/view/ContributorCollectionView.js"></script>
+        <script src="/js/app/Contributors/Controller.js"></script>
+        <script src="/js/app/Contributors/Router.js"></script>
+
         <!-- scripts.js-end -->
     </head>
     <body>
