--- a/client/home.html
+++ b/client/home.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="/css/app/Filter/view/SearcherView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Filter/view/FilterView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Schedule/view/GridView.css">
+        <link rel="stylesheet" type="text/css" href="/css/app/Schedule/view/EditView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Error/view/ErrorView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Messanger/view/InformationView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Groups/view/GroupCollectionView.css">
