Open page for group schedule

--- a/client/open/page.html
+++ b/client/open/page.html
@@ -4,34 +4,33 @@
         <meta charset="UTF-8">
         <title>Caesar Open Page</title>
 
-        <link rel="stylesheet" href="../css/lib/bootstrap.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/open/css/lib/bootstrap.css">
+        <link rel="stylesheet" href="/open/css/main.css">
 
-        <script src="../js/lib/jquery.js"></script>
-        <script src="../js/lib/underscore.js"></script>
-        <script src="../js/lib/backbone.js"></script>
-        <script src="../js/lib/mediator.min.js"></script>
-        <script src="../js/lib/bootstrap.js"></script>
-        <script src="../js/lib/moment.min.js"></script>
+        <script src="/open/js/lib/jquery.js"></script>
+        <script src="/open/js/lib/underscore.js"></script>
+        <script src="/open/js/lib/backbone.js"></script>
+        <script src="/open/js/lib/mediator.min.js"></script>
+        <script src="/open/js/lib/bootstrap.js"></script>
+        <script src="/open/js/lib/moment.min.js"></script>
         
-        <script src="js/main.js"></script>
+        <script src="/open/js/main.js"></script>
         
-        <script src="js/app/Router.js"></script>
+        <script src="/open/js/app/Router.js"></script>
 
-        <script src="js/app/Schedule/model/EventTypes.js"></script>
-        <script src="js/app/Schedule/model/Event.js"></script>
-        <script src="js/app/Schedule/model/EventCollection.js"></script>
-        <script src="js/app/Schedule/model/Group.js"></script>
-        <script src="js/app/Schedule/model/GroupCollection.js"></script>
+        <script src="/open/js/app/model/EventTypes.js"></script>
+        <script src="/open/js/app/model/Event.js"></script>
+        <script src="/open/js/app/model/EventCollection.js"></script>
+        <script src="/open/js/app/model/Group.js"></script>
+        <script src="/open/js/app/model/GroupCollection.js"></script>
 
-        <script src="js/app/Schedule/tpl/WeekTpl.js"></script>
-        <script src="js/app/Schedule/tpl/MonthTpl.js"></script>
+        <script src="/open/js/app/tpl/WeekTpl.js"></script>
+        <script src="/open/js/app/tpl/MonthTpl.js"></script>
 
-        <script src="js/app/Schedule/view/WeekView.js"></script>
-        <script src="js/app/Schedule/view/MonthView.js"></script>
+        <script src="/open/js/app/view/WeekView.js"></script>
+        <script src="/open/js/app/view/MonthView.js"></script>
 
-        <script src="js/app/Schedule/ScheduleController.js"></script>
-        <script src="js/app/Schedule/ScheduleRouter.js"></script>
+        <script src="/open/js/app/ScheduleController.js"></script>
 
     </head>
     <body>
