unfinished context menu

--- a/client/home.html
+++ b/client/home.html
@@ -33,6 +33,7 @@
         <script src="/js/lib/bootstrap.js"></script>
         <script src="/js/lib/bootstrap-datetimepicker.js"></script>
         <script src="/js/lib/js.cookie.js"></script>
+        <script src="/js/lib/context-menu.js"></script>
         
         <!-- scripts.js -->
         <script src="/js/main.js"></script>
@@ -141,6 +142,13 @@
 
         <script src="/js/app/Messenger/Controller.js"></script>
 
+        <!-- context menu -->
+        <script src="/js/app/ContextMenu/tpl/contextMenuTpl.js"></script>
+
+        <script src="/js/app/ContextMenu/view/MenuView.js"></script>
+
+        <script src="/js/app/ContextMenu/Controller.js"></script>
+
         <!-- contributors -->
         <script src="/js/app/Contributors/model/Contributor.js"></script>
         <script src="/js/app/Contributors/model/ContributorCollection.js"></script>
@@ -199,6 +207,7 @@
             </div>
         </div>
         <div class="messenger-wrap container"></div>
+        <div class="context-menu-wrap"></div>
         <div class="modal-wrap"></div>
     </body>
 </html>
