Open page: locations, routing, 404 error

--- a/client/open/page.html
+++ b/client/open/page.html
@@ -23,13 +23,18 @@
         <script src="/open/js/app/model/EventCollection.js"></script>
         <script src="/open/js/app/model/Group.js"></script>
         <script src="/open/js/app/model/GroupCollection.js"></script>
+        <script src="/open/js/app/model/Location.js"></script>
+        <script src="/open/js/app/model/LocationCollection.js"></script>
 
         <script src="/open/js/app/tpl/WeekTpl.js"></script>
         <script src="/open/js/app/tpl/MonthTpl.js"></script>
+        <script src="/open/js/app/tpl/ErrorTpl.js"></script>
 
         <script src="/open/js/app/view/WeekView.js"></script>
         <script src="/open/js/app/view/MonthView.js"></script>
+        <script src="/open/js/app/view/ErrorView.js"></script>
 
+        <script src="/open/js/app/ErrorController.js"></script>
         <script src="/open/js/app/ScheduleController.js"></script>
 
     </head>
