add navigation contributors

--- a/client/home.html
+++ b/client/home.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="/css/app/Schedule/view/GridView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Schedule/view/EditView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Error/view/ErrorView.css">
+        <link rel="stylesheet" type="text/css" href="/css/app/Contributor/view/ContributorView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Messanger/view/InformationView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Groups/view/GroupCollectionView.css">
         <link rel="stylesheet" type="text/css" href="/css/app/Locations/view/LocationView.css">
