Left-right navigation added

--- a/client/home.html
+++ b/client/home.html
@@ -158,6 +158,9 @@
         <script src="/js/app/Contributors/view/ContributorCollectionView.js"></script>
         <script src="/js/app/Contributors/Controller.js"></script>
         <script src="/js/app/Contributors/Router.js"></script>
+        
+        <!-- navigator -->
+        <script src="/js/app/Navigator/Controller.js"></script>
 
         <!-- scripts.js-end -->
     </head>
@@ -168,7 +171,7 @@
                     <div class="main-menu">
                         <!--<div id="logo"></div>-->
                     </div>
-                    <div class="main-nav">
+                    <div class="main-nav left-arrow">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     </div>
                 </div>
@@ -200,7 +203,7 @@
                     <div class="user-account">
                         <p><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User info will be here</p>
                     </div>
-                    <div class="main-nav" id="right-navig">
+                    <div class="main-nav right-arrow">
                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     </div>
                 </div>
