add directions server+client

--- a/client/home.html
+++ b/client/home.html
@@ -79,7 +79,11 @@
         <!-- employee -->
         <script src="/js/app/Employee/model/Employee.js"></script>
         <script src="/js/app/Employee/model/EmployeeCollection.js"></script>
-        
+
+        <!-- direction -->
+        <script src="/js/app/Direction/model/Direction.js"></script>
+        <script src="/js/app/Direction/model/DirectionCollection.js"></script>
+
         <!-- cookies -->
         <script src="/js/app/Cookies/Processor.js"></script>
         <script src="/js/app/Cookies/Controller.js"></script>
