--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -17,6 +17,7 @@
     <script src="/js/lib/bootstrap.js"></script>
     <script src="/js/lib/bootstrap-datetimepicker.js"></script>
     <script src="/js/lib/js.cookie.js"></script>
+    <script src="/js/lib/md5.js"></script>
 
     <script src="js/main.js"></script>
     <!-- TEMPLATES -->
