--- a/client/home.html
+++ b/client/home.html
@@ -157,9 +157,11 @@
         <script src="/js/app/Contributors/model/Contributor.js"></script>
         <script src="/js/app/Contributors/model/ContributorCollection.js"></script>
         <script src="/js/app/Contributors/tpl/ContributorTpl.js"></script>
+        <script src="/js/app/Contributors/tpl/groupContributorTpl.js"></script>
         <script src="/js/app/Contributors/tpl/ContributorCollectionTpl.js"></script>
         <script src="/js/app/Contributors/view/ContributorView.js"></script>
         <script src="/js/app/Contributors/view/ContributorCollectionView.js"></script>
+        <script src="/js/app/Contributors/view/GroupContributorView.js"></script>
         <script src="/js/app/Contributors/Controller.js"></script>
         <script src="/js/app/Contributors/Router.js"></script>
         
